--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -12,6 +12,9 @@
         <li class="nav-item" routerLinkActive="active">
           <a class="nav-link" routerLink="/products">Products</a>
         </li>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" routerLink="/categories">Categories</a>
+        </li>
       </ul>
    
     </div>
