--- a/src/app/components/product-update/product-update.component.html
+++ b/src/app/components/product-update/product-update.component.html
@@ -65,8 +65,8 @@
     <div class="row">
         <div class="col-12">
             <div class="form-group">
-                <label for="product_description">Description</label>
-                <textarea [(ngModel)]="product.description" class="form-control" id="product_description"></textarea>
+                <label>Description</label>
+                <editor [(ngModel)]="product.description"></editor>
             </div>
         </div>
     </div>
