--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,16 +1,28 @@
 <div class="container">
     <div class="row">
-        <div class="col-4 offset-4">
+        <div class="col-12 offset-sm-4 col-sm-4">
             <div class="box">
                 <div class="form-group">
                     <label for="email">Email: </label>
-                    <input type="email" class="form-control"/>
+                    <input type="email" [(ngModel)]="loginData.email" class="form-control" />
                 </div>
                 <div class="form-group">
                     <label for="password">Password: </label>
-                    <input type="password" class="form-control"/>
+                    <input type="password" [(ngModel)]="loginData.password" class="form-control" />
                 </div>
-                <button class="btn btn-success btn-block mt-4">
+
+                <div *ngIf="errorMessage" class="alert alert-danger">
+                    {{ errorMessage }}
+                </div>
+                <div *ngIf="validationErrors.length" class="alert alert-warning">
+                    <ul class="pl-1">
+                        <li *ngFor="let error of validationErrors">
+                            {{ error.msg }}
+                        </li>
+                    </ul>
+                </div>
+
+                <button (click)="login()" class="btn btn-success btn-block mt-4">
                     Login
                 </button>
             </div>
