--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="#">App-isteuto</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -17,5 +17,11 @@
         </li>
       </ul>
    
+      <span class="text-white mr-3">
+        Hello <b>{{ user?.firstName }}!</b>
+      </span>
+      <button (click)="logout()" class="btn btn-outline-light">
+        Logout
+      </button>
     </div>
   </nav>
