--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,1 +1,11 @@
-<p>dashboard works!</p>
+<h1>Hello world</h1>
+
+<button (click)="getStats()" class="btn btn-outline-primary">
+    Refresh
+</button>
+
+<chart 
+    [type]="type" 
+    [data]="data" 
+    [options]="options"
+></chart>
