--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -33,7 +33,7 @@
                     </thead>
                     <tbody>
                         <tr *ngFor="let p of products">
-                            <td><img [src]="p.photo" height="30" /></td>
+                            <td><img [src]="'http://localhost:3000/uploads/' + p.photo" height="30" /></td>
                             <td>{{ p.title }}</td>
                             <td>{{ p.miniDescription }}</td>
                             <td>{{ p.price }}</td>
